<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tweet Viewer</string>
    <string name="action_settings">Settings</string>
    <string name="oauth_label">Authenticate with Twitter</string>
    <string name="title_activity_timeline">Tweets</string>
    <string name="username_label">\@user</string>
    <string name="placeholder_time_text">a moment ago</string>
    <string name="placeholder_tweet_text">Hello twitter.</string>
    <string name="title_activity_compose">Compose</string>
    <string name="compose_tweet_hint">compose your tweet</string>
    <string name="action_compose">Compose</string>
    <string name="max_chars_text">140</string>
    <string name="chars_avail_label">characters available</string>
    <string name="bt_send_tweet_label">send tweet</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile_description_text">Twitter User Profile</string>
    <string name="profile_image_description_text">Twitter User Profile</string>
    <string name="placeholder_user_name_text">User Name</string>
    <string name="placeholder_user_bio_text">User Bio</string>
	<string name="placeholder_followers_text">0 Followers</string>
	<string name="placeholder_following_text">0 Following</string>
	
</resources>